--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,9 @@
-# Core packages
-streamlit
-pandas
-requests
-beautifulsoup4
-python-dotenv
-
-# ML packages for sentiment analysis (showcase ML skills)
-textblob
-vaderSentiment
-
-# Optional: Advanced ML (comment out if causing issues)
-# transformers
-# torch
-
-# Note: 
-# - textblob: Uses Naive Bayes classifier (good for CV)
-# - vaderSentiment: Lexicon-based ML model (industry standard)
-# - transformers: State-of-the-art deep learning (if you want to show advanced ML)
+# Create/update requirements.txt
+echo 'streamlit>=1.28.0
+pandas>=2.0.3
+requests>=2.31.0
+beautifulsoup4>=4.12.2
+python-dotenv>=1.0.0
+textblob>=0.17.1
+vaderSentiment>=3.3.2
+numpy>=1.24.3' > requirements.txt
